# kairos-plus-connector

./: README.md  api.yml  docker-compose.yml  flake.nix  pyproject.toml  pytest.ini
kpconn/: db.py
kpconn/server/: app.py  job.py
test/: conftest.py  test_db.py  test_main.py  test_server.py
test/data/: consume.json
