[tool.poetry]
name = "kpconn"
version = "0.1.0"
description = ""
authors = ["Brendon Boldt <bboldt@cs.cmu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.1"
black = "^23.12.1"
sdfval = {branch = "main", git = "https://github.com/CHRONOS-KAIROS/sdf-validator"}
pytest = "^7.4.4"
pydantic = "^1.10.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
