[tool.poetry]
name = "kpconn"
version = "0.1.0"
description = ""
authors = ["Brendon Boldt <bboldt@cs.cmu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.1"
sdfval = {branch = "main", git = "https://github.com/CHRONOS-KAIROS/sdf-validator"}
pydantic = "^1.10.4"
gunicorn = "^21.2.0"
flask-cors = "^4.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
black = "^23.12.1"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
